--- a/styles.css
+++ b/styles.css
@@ -7,17 +7,36 @@
 
   /* ▼ HTML ▼ */
 html {
-    color-scheme: light dark;
+    color-scheme: only light;
 }
   /* ▲ HTML ▲ */
 
   /* ▼ COLOR SETUP ▼ */
 :root {
-    --color-seashade: light-dark(#a1c9d2, #425458);
-    --color-tethys: light-dark(#7975ac, #29283d);
-    --rotation: 0deg;
-    --hueRotation: 0deg;
-    --inverseHueRotation: 0deg;
+  /* RANDOM COLORS ??? */
+  --color-tethys: light-dark(#a39dd6, #1900ff99);
+  --color-venerian: light-dark(#dea785,#ff620099);
+  --color-amphidracon: light-dark(#285532, #28553299);
+
+  /* LIGHT GRAYS */
+  --color-snow: light-dark(#ffffff, #ff0000);
+  --color-silver: light-dark(#c1c1c1, #414141);
+  --color-moon: light-dark(#b1b1b1, #383838);
+  --color-dove: light-dark(#a1a1a1, #202020);
+  --color-steel: light-dark(#9a9a9a, #0000ff);
+  --color-basalt: light-dark(#7e7e7e, #1c1c1c);
+
+  --color-oilspill: light-dark(#3c3c3c, #101010);
+  --color-tarnish: light-dark(#2c2c2c, #0f0f0f);
+  --color-charcoal: light-dark(#14141499, #ff00ff);
+  --color-soot: light-dark(#202020, #00ff99);
+  --color-coal: light-dark(#191919, #00ffff);
+  --color-raven: light-dark(#171717, #ff0000);
+  --color-absolute: light-dark(#ffffff, #000000);
+  
+  --rotation: 0deg;
+  --hueRotation: 0deg;
+  --inverseHueRotation: 0deg;
 }
   /* ▲ COLOR SETUP ▲ */
 
@@ -26,44 +45,232 @@ html {
 /* !:!:!:! ▼ MAIN ▼ !:!:!:! */
 
   /* ▼ ELEMENTS ▼ */
+#mainSite {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: var(--color-absolute);
+  overflow-x: hidden;
+  overflow-y: hidden;
+}
+#sidebar {
+  /*box-shadow: inset -1px -1px 0px 4px #ff00ff;*/
+  background: linear-gradient(to right, var(--color-basalt) 90%, var(--color-oilspill) 90%);
+  width: 15vw;
+  left: 0vw;
+  top: 100vh;
+  height: 100vh;
+  display: inline-block;
+  position: absolute;
+  justify-content: left;
+  z-index: 6;
+  margin: 0px;
+}
+#sidebar_shadow {
+  background: linear-gradient(to right, var(--color-tarnish), #00000000);
+  backdrop-filter: blur(5px) grayscale(100%);
+  width: 100vw;
+  left: -100vw;
+  height: 100vh;
+  display: inline-block;
+  position: absolute;
+  justify-content: left;
+  z-index: 5;
+  margin: 0px;
+}
+#maincontent_slider {
+  background: linear-gradient(to bottom, var(--color-raven), var(--color-tarnish));
+  width: 100vw;
+  top: -100vh;
+  height: 100vh;
+  display: inline-block;
+  position: absolute;
+  justify-content: left;
+  z-index: 4;
+  margin: 0px;
+}
+#sidebarClickButton {
+  position: absolute;
+}
   /* ▲ ELEMENTS ▲ */
 
+
   /* ▼ CLASSES ▼ */
-.main_site {
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    margin: 0;
-    padding: 0;
-    min-width: 100vw;
-    min-height: 100vh;
-    scrollbar-width: none;
-    overflow-x: hidden;
-    overflow-y: hidden;
+.unselectable {
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
 }
-.main_background {
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  background: linear-gradient(to bottom, #454545, #9a9a9a);/*var(--color-seashade), var(--color-tethys));*/
-  filter: hue-rotate(var(--hueRotation));
-}
-.main_boxshadow {
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  filter: hue-rotate(var(--inverseHueRotation));
-  box-shadow: inset 0px -50vh 200px -250px #ff00ff;
+.selectable {
+  user-select: text;
+  -moz-user-select: text;
+  -webkit-user-select: text;
+  -ms-user-select: text;
 }
 .material-symbols-rounded {
-    font-variation-settings: 'FILL' 1;
+  font-family: 'Material Symbols Outlined';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 480px;  /* Preferred icon size */
+  display: inline-block;
+  line-height: 1;
+  text-transform: none;
+  letter-spacing: normal;
+  word-wrap: normal;
+  white-space: nowrap;
+  direction: ltr;
+}
+
+.sidebarButton {
+  width: 80%;
+  height: 100%;
+  background-color: var(--color-moon);
+  border: 4px solid var(--color-oilspill);
+  transition: 0.1s;
+  margin: 4px;
+  margin-left: 10px;
+  padding-left: 20px;
+  border-radius: 0px 0px 10px 0px;
+  font-family: "Silkscreen";
+}
+.sidebarButton:hover {
+  width: 100%;
+  transition: 0.1s;
+  border: 4px solid var(--color-tarnish);
+  background-color: var(--color-silver);
+}
+.content_right {
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100vw;
+  height: 85vh;
+  display: inline-block;
+}
+.hotbar_display {
+  width: 100vw;
+  height: 15vh;
+  background: linear-gradient(to right, var(--color-venerian), var(--color-tarnish), var(--color-venerian));
+  box-shadow: inset -1px -1px 0px 4px #00ff00;
+  padding: 5px;
+  font-size: 25px;
+  font-family: "Silkscreen";
 }
   /* ▲ CLASSES ▲ */
-  
-  /* ▼ DIV IDS ▼ */
-  /* ▲ DIV IDS ▲ */
+
+
+  /* ▼ ANIMATION CLASSES ▼ */
+.animation_extendSidebar {
+  animation: 0.3s ease-out sidemenu_extend;
+  animation-fill-mode: forwards;
+}
+.animation_removeSidebar {
+  animation: 0.6s ease-out sidemenu_remove;
+  animation-fill-mode: forwards;
+}
+.animation_extendSidebarDarken {
+  animation: 0.6s ease-out sidemenu_extend_darken;
+  animation-fill-mode: forwards;
+}
+.animation_removeSidebarDarken {
+  animation: 0.3s ease-in sidemenu_remove_darken;
+  animation-fill-mode: forwards;
+}
+.animation_mainContentSlide {
+  animation: 600ms mainmenu_slide_activate;
+}
+  /* ▲ ANIMATION CLASSES ▲ */
 
   /* ▼ ANIMATIONS ▼ */
+@keyframes sidemenu_extend {
+  0% {
+    top: -100vw;
+  }
+  100% {
+    top: 0vw;
+  }
+}
+@keyframes sidemenu_remove {
+  0% {
+    top: 0vw;
+  }
+  50% {
+    top: 0vw;
+  }
+  100% {
+    top: -100vw;
+  }
+}
+@keyframes sidemenu_extend_darken {
+  0% {
+    left: -100vw;
+  }
+  50% {
+    left: -100vw;
+  }
+  100% {
+    left: 0vw;
+  }
+}
+@keyframes sidemenu_remove_darken {
+  0% {
+    left: 0vw;
+  }
+  50% {
+    left: -100vw;
+  }
+  100% {
+    left: -100vw;
+  }
+}
+@keyframes mainmenu_slide_activate {
+  0% {
+    top: -100vh;
+  }
+  25% {
+    top: 0vh;
+  }
+  75% {
+    top: 0vh;
+  }
+  100% {
+    top: -100vh;
+  }
+
+}
+@keyframes backgroundpulse {
+  0% {
+    background: linear-gradient(to right, #ff00ff);
+  }
+  100% {
+    background: linear-gradient(to right, #00ffff);
+  }
+}
   /* ▲ ANIMATIONS ▲ */
+
+
+  /* ▼ WEBKIT ▼ */
+::-webkit-scrollbar {
+  width:10px;
+  height: 10px;
+}
+::-webkit-scrollbar-track {
+  background-color: #000;
+  border: 3px solid #222;
+  border-radius: 15px;
+  padding: 5px;
+  box-shadow: inset 2px 2px 2px #454545;
+  opacity: 1 !important;
+}
+::-webkit-scrollbar-thumb {
+  background: light-dark(#111, #00000088);
+  border: 3px solid light-dark(#555, #292929);
+  border-radius: 10px;
+}
+  /* ▲ WEBKIT ▲ */
+
+
 
 /* !:!:!:! ▲ MAIN ▲ !:!:!:! */
