changed steel color

--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ html {
   --color-silver: light-dark(#c1c1c1, #414141);
   --color-moon: light-dark(#b1b1b1, #383838);
   --color-dove: light-dark(#a1a1a1, #202020);
-  --color-steel: light-dark(#9a9a9a, #0000ff);
+  --color-steel: light-dark(#9a9a9a, #242424);
   --color-basalt: light-dark(#7e7e7e, #1c1c1c);
 
   --color-oilspill: light-dark(#3c3c3c, #101010);
